Minor fixups from testing, especially with paragraph line-height and spacing

--- a/sass/elements/list.sass
+++ b/sass/elements/list.sass
@@ -5,6 +5,9 @@ ol, ul
 	line-height: $list-line-height
 	padding: $list-padding
 
+li, dd
+	margin-top: $list-item-margin
+
 dl, ol, ul
 	margin-bottom: $list-margin-bottom
 
@@ -16,4 +19,3 @@ dt
 dd
 	font-style: italics
 	padding: $list-padding
-	margin-top: $definition-margin
