--- a/sass/meta/sizes.sass
+++ b/sass/meta/sizes.sass
@@ -11,7 +11,7 @@ $mobile: (max-width: 1023px)
 
 // Page margin for each side of the page.
 $page-margin: 6%
-$content-margin: 0.5rem
+$content-margin: 1rem
 
 // --------
 // Elements
@@ -47,10 +47,10 @@ $kbd-margin: 0 0.25em
 $kbd-padding: 0	0.5em
 
 // Lists
+$list-item-margin: 0.5em
 $list-line-height: 2em
 $list-margin-bottom: 1em
 $list-padding: 0 2em
-$definition-margin: 0.5em
 
 // Menus
 $menu-label-width: 9.375em
@@ -83,7 +83,7 @@ $video-desktop-max-width: 70%
 // Content
 $content-image-margin: $content-margin
 $content-image-featured-margin: 2em
-$paragraph-line-height: 2em
+$paragraph-line-height: 1.5em
 $paragraph-margin-bottom: $content-margin
 
 // Footer
